--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Install dependencies
       run: pnpm install --frozen-lockfile
 
+    - name: Format check
+      run: pnpm format:check
+
     - name: Typecheck
       run: pnpm typecheck
 
