--- a/web/package.json
+++ b/web/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "web",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "next dev --port 3000",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@tanstack/react-form": "^1.28.3",
-    "@tanstack/react-query": "^5.90.21",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.575.0",
-    "next": "^16.1.6",
-    "radix-ui": "^1.4.3",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.5.0",
-    "zod": "^4.3.6"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4.2.0",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "shadcn": "^3.8.5",
-    "tailwindcss": "^4.2.0",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "~5.9.3"
-  }
+	"name": "web",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "next dev --port 3000",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"typecheck": "tsc --noEmit",
+		"format": "biome format --write .",
+		"format:check": "biome format .",
+		"check": "biome check ."
+	},
+	"dependencies": {
+		"@tanstack/react-form": "^1.28.3",
+		"@tanstack/react-query": "^5.90.21",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.575.0",
+		"next": "^16.1.6",
+		"radix-ui": "^1.4.3",
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
+		"sonner": "^2.0.7",
+		"tailwind-merge": "^3.5.0",
+		"zod": "^4.3.6"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.4.4",
+		"@tailwindcss/postcss": "^4.2.0",
+		"@types/node": "^24.10.1",
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
+		"shadcn": "^3.8.5",
+		"tailwindcss": "^4.2.0",
+		"tw-animate-css": "^1.4.0",
+		"typescript": "~5.9.3"
+	}
 }
