Fix lint: replace next lint with biome, auto-fix imports, exclude generated UI

--- a/web/biome.json
+++ b/web/biome.json
@@ -16,7 +16,8 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true
-		}
+		},
+		"includes": ["**", "!!src/components/ui/**"]
 	},
 	"css": {
 		"parser": {
