--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev --port 3000",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
+		"lint": "biome lint .",
 		"typecheck": "tsc --noEmit",
 		"format": "biome format --write .",
 		"format:check": "biome format .",
